Fix code warnings